# bevy-2d-platformer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/ldtk/: project.ldtk
assets/ldtk/project/simplified/Level_0/: Level_Geometry.csv  data.json
assets/sprites/: bullet.aseprite  palette.aseprite  player.aseprite  player.json
scripts/: generate-level-constant-strings.js
src/: aseprite_deserialize.rs  bundles.rs  components.rs  constants.rs  level_enums.rs  main.rs  states.rs  tile_merger.rs
src/bundles/: camera.rs  level.rs  mod.rs  physics_tile.rs  platform.rs  player.rs  spawn_point.rs
src/plugins/: _claude_collision.rs  animation.rs  animation_library.rs  camera.rs  collision.rs  game.rs  gravity.rs  level.rs  menu.rs  mod.rs  player.rs  projectile.rs
