[package]
name = "bevy2dmetroidvania"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bevy = "0.16.1"
avian2d = "0.3.1"
leafwing-input-manager = "0.17.1"
ldtk_rust = { path = "../ldtk_rust" }
bevy-inspector-egui = "0.33.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_common_assets = { version = "0.13.0", features = ["json"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
